# STM8S_StdPeriph_Lib

./: README.md
Libraries/STM8S_StdPeriph_Driver/: CMakeLists.txt
Libraries/STM8S_StdPeriph_Driver/inc/: stm8s.h
Libraries/STM8S_StdPeriph_Driver/src/: stm8s_can.c  stm8s_clk.c  stm8s_flash.c  stm8s_tim1.c  stm8s_tim2.c  stm8s_tim3.c  stm8s_tim5.c  stm8s_uart1.c  stm8s_uart2.c  stm8s_uart4.c
Project/STM8S_StdPeriph_Template/: stm8s_it.h
Project/STM8S_StdPeriph_Template/SDCC_CMAKE/: CMakeLists.txt  Toolchain-sdcc.cmake
